<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_number"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:id="@+id/tv_number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_song"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/tv_song"
        app:layout_constraintStart_toStartOf="@id/tv_number"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_singer"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:id="@+id/tv_singer"
        app:layout_constraintStart_toStartOf="@id/tv_song"
        app:layout_constraintTop_toBottomOf="@id/tv_song" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_song_time"
        android:id="@+id/tv_song_time"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>