<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".FirstFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/background"
        android:id="@+id/image"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_preview"
        android:textSize="34sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tv_singer_name"
        app:layout_constraintStart_toStartOf="@id/tv_singer_name"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_singer_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/tv_singer_name"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_song"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="350dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_songs"
        />





</androidx.constraintlayout.widget.ConstraintLayout>